--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primaryColor">#b388ff</color>
+    <color name="primaryLightColor">#e7b9ff</color>
+    <color name="primaryDarkColor">#805acb</color>
+    <color name="secondaryColor">#ff80ab</color>
+    <color name="secondaryLightColor">#ffb2dd</color>
+    <color name="secondaryDarkColor">#c94f7c</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#000000</color>
+    
 </resources>
