--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:paddingBottom="64dp"
+        android:paddingBottom="@dimen/list_padding"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <TextView
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimaryVariant"
         android:textColor="@color/white"
-        android:padding="15dp"
+        android:padding="@dimen/subtotal_padding"
         tools:text="Subtotal: $55.66"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"/>
 
