--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="10dp"
-    android:layout_margin="4dp"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/card_height"
+    android:layout_margin="@dimen/card_margin"
+    app:cardCornerRadius="@dimen/card_radius"
     app:strokeColor="@color/stroke_color"
-    app:strokeWidth="1dp">
+    app:strokeWidth="@dimen/card_stroke">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,9 +16,9 @@
         
         <ImageView
             android:id="@+id/cart_thumbnail"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:padding="5dp"
+            android:layout_width="@dimen/card_height"
+            android:layout_height="@dimen/card_height"
+            android:padding="@dimen/card_padding"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:src="@tools:sample/avatars"/>
@@ -29,7 +29,7 @@
             android:textColor="@color/black"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="@dimen/card_inner_margin"
             tools:text="Product Name"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +43,7 @@
             android:textColor="@color/secondaryDarkColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="@dimen/card_inner_margin_small"
             tools:text="$1.15"
             app:layout_constraintTop_toBottomOf="@id/cart_item_name"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -51,10 +51,10 @@
 
         <ImageView
             android:id="@+id/cart_item_remove"
-            android:layout_width="72dp"
+            android:layout_width="@dimen/card_close_width"
             android:layout_height="0dp"
             android:src="@drawable/ic_baseline_close_24"
-            android:padding="15dp"
+            android:padding="@dimen/card_inner_margin"
             app:tint="@color/secondaryDarkColor"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
