--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,18 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="dialog_margin">24dp</dimen>
-    
+    <dimen name="list_padding">64dp</dimen>
+    <dimen name="subtotal_padding">15dp</dimen>
+
     <dimen name="scanner_type_button_margin">50dp</dimen>
     <dimen name="scanner_type_button_padding">15dp</dimen>
+
+    <dimen name="card_height">100dp</dimen>
+    <dimen name="card_margin">4dp</dimen>
+    <dimen name="card_radius">10dp</dimen>
+    <dimen name="card_stroke">1dp</dimen>
+    <dimen name="card_padding">5dp</dimen>
+    <dimen name="card_inner_margin">15dp</dimen>
+    <dimen name="card_inner_margin_small">5dp</dimen>
+    <dimen name="card_close_width">72dp</dimen>
 </resources>
