--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,17 +27,28 @@
         android:clipToPadding="false"
         android:paddingBottom="@dimen/list_padding"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-    <TextView
-        style="@style/TextAppearance.MaterialComponents.Headline5"
-        android:id="@+id/subtotal"
+    
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/subtotal_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimaryVariant"
-        android:textColor="@color/white"
-        android:padding="@dimen/subtotal_padding"
-        tools:text="Subtotal: $55.66"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"/>
+        android:background="?attr/colorPrimary"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+
+        <TextView
+            style="@style/TextAppearance.MaterialComponents.Headline5"
+            android:id="@+id/subtotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/subtotal_padding"
+            tools:text="Subtotal: $55.66"
+            android:textColor="@color/primaryTextColor"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -46,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_baseline_add_24"
-        app:layout_anchor="@id/subtotal"
+        app:layout_anchor="@id/subtotal_sheet"
         app:layout_anchorGravity="top|end"/>
     
 
