--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent" />
 
     <com.google.android.material.button.MaterialButton
+        style="@style/Widget.MaterialComponents.Button.Secondary"
         android:id="@+id/button_type_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
